--- a/packages/vscode-extension/src/controls/sampleGallery/sampleListItem.scss
+++ b/packages/vscode-extension/src/controls/sampleGallery/sampleListItem.scss
@@ -137,7 +137,7 @@ body.vscode-light {
   }
 
   .featured-sample-section .buttonSection {
-    background-color: #F8F8F8;
+    background-color: #E0E0E0;
   }
 }
 
@@ -148,6 +148,6 @@ body.vscode-dark {
   }
 
   .featured-sample-section .buttonSection {
-    background-color: #252526;
+    background-color: #383838;
   }
 }
